// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileList should render correctly in english 1`] = `
<DocumentFragment>
  <div
    class="edit-dataset__file-list-container"
  >
    <div
      class="af-tabs af-tabs--container"
    >
      <ul
        class="af-tabs__control"
      >
        <li
          class="af-tabs__item af-tabs__item--active"
        >
          <button
            class="af-tabs__link"
            id="0"
          >
            General information
          </button>
        </li>
        <li
          class="af-tabs__item"
        >
          <button
            class="af-tabs__link"
            id="1"
          >
            Files list
          </button>
        </li>
      </ul>
      <div
        class="af-tabs__content"
      >
        <div
          class="af-tabs__pane"
        >
          <article
            class="af-restitution"
          >
            <section
              class="af-restitution__content"
            >
              <div
                class="col col-sm-12 col-md-12 col-lg-12 col-xl-12"
              >
                <div
                  class="row af-restitution__content-left"
                >
                  <div
                    class="col-sm-12 col-md-12 col-lg-6 col-xl-6"
                  >
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Name
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        datasetName
                      </dd>
                    </dl>
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Creation date
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        01/01/0001
                      </dd>
                    </dl>
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Type
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        Image
                      </dd>
                    </dl>
                  </div>
                  <div
                    class="col-sm-12 col-md-12 col-lg-6 col-xl-6"
                  >
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Number of files
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        1
                      </dd>
                    </dl>
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Total files size
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        0 Byte
                      </dd>
                    </dl>
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Average file size
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        0 Byte
                      </dd>
                    </dl>
                  </div>
                </div>
              </div>
            </section>
          </article>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileList should render correctly in english 2`] = `
<DocumentFragment>
  <div
    class="edit-dataset__file-list-container"
  >
    <div
      class="af-tabs af-tabs--container"
    >
      <ul
        class="af-tabs__control"
      >
        <li
          class="af-tabs__item"
        >
          <button
            class="af-tabs__link"
            id="0"
          >
            General information
          </button>
        </li>
        <li
          class="af-tabs__item af-tabs__item--active"
        >
          <button
            class="af-tabs__link"
            id="1"
          >
            Files list
          </button>
        </li>
      </ul>
      <div
        class="af-tabs__content"
      >
        <div
          class="af-tabs__pane"
        >
          <table
            class="af-table"
          >
            <thead
              class="af-table-thead"
            >
              <tr
                class="af-table__tr"
              >
                <th
                  class="af-table__th"
                >
                  <span
                    class="af-table__th-content"
                  >
                    Name
                  </span>
                </th>
                <th
                  class="af-table__th"
                >
                  <span
                    class="af-table__th-content "
                  >
                    Type
                  </span>
                </th>
                <th
                  class="af-table__th"
                >
                  Size
                </th>
                <th
                  class="af-table__th"
                >
                  Action
                </th>
              </tr>
            </thead>
            <tbody
              class="af-table__body"
            >
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  <a
                    alt="testFile.png"
                    href="#testFile.png"
                  >
                    testFile.png
                  </a>
                </td>
                <td
                  class="af-table__cell"
                >
                  Image
                </td>
                <td
                  class="af-table__cell"
                >
                  0 Byte
                </td>
                <td
                  class="af-table__cell"
                >
                   
                  <a
                    class="btn af-btn--circle"
                    href="#"
                    id="deleteButton"
                    role="button"
                    tabindex="0"
                    title="Delete"
                  >
                    <i
                      class="glyphicon glyphicon-trash"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="af-paging"
          >
            <div
              class="af-paging__limit"
            >
              <div
                class="af-paging__limit"
              >
                <form
                  class="af-paging__form"
                >
                  <div
                    class="af-form__group"
                  >
                    <div
                      class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
                    >
                      <label
                        class="af-form__group-label"
                        for="home_paging"
                      >
                        Display
                      </label>
                    </div>
                    <div
                      class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
                    >
                      <div
                        class="af-form__select"
                      >
                        <div
                          class="af-form__select-container"
                        >
                          <select
                            class="af-form__input-select"
                            id="home_paging"
                          >
                            <option
                              value="5"
                            >
                              5
                            </option>
                            <option
                              value="10"
                            >
                              10
                            </option>
                            <option
                              value="25"
                            >
                              25
                            </option>
                            <option
                              value="50"
                            >
                              50
                            </option>
                            <option
                              value="100"
                            >
                              100
                            </option>
                          </select>
                          <span
                            class="glyphicon glyphicon-menu-down"
                          />
                        </div>
                        <span
                          class="af-form__input-cmplt"
                        >
                          elements
                        </span>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
            <div
              class="af-paging__pager"
            >
              <nav
                class="af-pager"
              >
                <ul
                  class="af-pager__pagination"
                >
                  <li
                    class="af-pager__item af-pager__item--disabled"
                  >
                    <span
                      class="af-pager__item-nolink"
                    >
                      « Previous
                    </span>
                  </li>
                  <li
                    class="af-pager__item af-pager__item--active"
                  >
                    <a
                      class="af-pager__item-link"
                      href="#"
                    >
                      <span>
                        1
                      </span>
                    </a>
                  </li>
                  <li
                    class="af-pager__item af-pager__item--disabled"
                  >
                    <span
                      class="af-pager__item-nolink"
                    >
                      Next »
                    </span>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileList should render correctly in french 1`] = `
<DocumentFragment>
  <div
    class="edit-dataset__file-list-container"
  >
    <div
      class="af-tabs af-tabs--container"
    >
      <ul
        class="af-tabs__control"
      >
        <li
          class="af-tabs__item af-tabs__item--active"
        >
          <button
            class="af-tabs__link"
            id="0"
          >
            Informations générales
          </button>
        </li>
        <li
          class="af-tabs__item"
        >
          <button
            class="af-tabs__link"
            id="1"
          >
            Liste des fichiers
          </button>
        </li>
      </ul>
      <div
        class="af-tabs__content"
      >
        <div
          class="af-tabs__pane"
        >
          <article
            class="af-restitution"
          >
            <section
              class="af-restitution__content"
            >
              <div
                class="col col-sm-12 col-md-12 col-lg-12 col-xl-12"
              >
                <div
                  class="row af-restitution__content-left"
                >
                  <div
                    class="col-sm-12 col-md-12 col-lg-6 col-xl-6"
                  >
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Nom
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        datasetName
                      </dd>
                    </dl>
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Date de création
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        01/01/0001
                      </dd>
                    </dl>
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Type
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        Image
                      </dd>
                    </dl>
                  </div>
                  <div
                    class="col-sm-12 col-md-12 col-lg-6 col-xl-6"
                  >
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Nombre de fichiers
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        1
                      </dd>
                    </dl>
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Poids total des fichiers
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        0 Byte
                      </dd>
                    </dl>
                    <dl
                      class="af-restitution__listdef"
                    >
                      <dt
                        class="af-restitution__listdef-item"
                      >
                        <span
                          class="af-restitution__text"
                        >
                          Poids moyen des fichiers
                        </span>
                      </dt>
                      <dd
                        class="af-restitution__listdef-value"
                      >
                        0 Byte
                      </dd>
                    </dl>
                  </div>
                </div>
              </div>
            </section>
          </article>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileList should render correctly in french 2`] = `
<DocumentFragment>
  <div
    class="edit-dataset__file-list-container"
  >
    <div
      class="af-tabs af-tabs--container"
    >
      <ul
        class="af-tabs__control"
      >
        <li
          class="af-tabs__item"
        >
          <button
            class="af-tabs__link"
            id="0"
          >
            Informations générales
          </button>
        </li>
        <li
          class="af-tabs__item af-tabs__item--active"
        >
          <button
            class="af-tabs__link"
            id="1"
          >
            Liste des fichiers
          </button>
        </li>
      </ul>
      <div
        class="af-tabs__content"
      >
        <div
          class="af-tabs__pane"
        >
          <table
            class="af-table"
          >
            <thead
              class="af-table-thead"
            >
              <tr
                class="af-table__tr"
              >
                <th
                  class="af-table__th"
                >
                  <span
                    class="af-table__th-content"
                  >
                    Nom
                  </span>
                </th>
                <th
                  class="af-table__th"
                >
                  <span
                    class="af-table__th-content "
                  >
                    Type
                  </span>
                </th>
                <th
                  class="af-table__th"
                >
                  Poids
                </th>
                <th
                  class="af-table__th"
                >
                  Action
                </th>
              </tr>
            </thead>
            <tbody
              class="af-table__body"
            >
              <tr
                class="af-table__tr"
              >
                <td
                  class="af-table__cell"
                >
                  <a
                    alt="testFile.png"
                    href="#testFile.png"
                  >
                    testFile.png
                  </a>
                </td>
                <td
                  class="af-table__cell"
                >
                  Image
                </td>
                <td
                  class="af-table__cell"
                >
                  0 Byte
                </td>
                <td
                  class="af-table__cell"
                >
                   
                  <a
                    class="btn af-btn--circle"
                    href="#"
                    id="deleteButton"
                    role="button"
                    tabindex="0"
                    title="Supprimer"
                  >
                    <i
                      class="glyphicon glyphicon-trash"
                    />
                  </a>
                </td>
              </tr>
            </tbody>
          </table>
          <div
            class="af-paging"
          >
            <div
              class="af-paging__limit"
            >
              <div
                class="af-paging__limit"
              >
                <form
                  class="af-paging__form"
                >
                  <div
                    class="af-form__group"
                  >
                    <div
                      class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
                    >
                      <label
                        class="af-form__group-label"
                        for="home_paging"
                      >
                        Afficher
                      </label>
                    </div>
                    <div
                      class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
                    >
                      <div
                        class="af-form__select"
                      >
                        <div
                          class="af-form__select-container"
                        >
                          <select
                            class="af-form__input-select"
                            id="home_paging"
                          >
                            <option
                              value="5"
                            >
                              5
                            </option>
                            <option
                              value="10"
                            >
                              10
                            </option>
                            <option
                              value="25"
                            >
                              25
                            </option>
                            <option
                              value="50"
                            >
                              50
                            </option>
                            <option
                              value="100"
                            >
                              100
                            </option>
                          </select>
                          <span
                            class="glyphicon glyphicon-menu-down"
                          />
                        </div>
                        <span
                          class="af-form__input-cmplt"
                        >
                          éléments
                        </span>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
            <div
              class="af-paging__pager"
            >
              <nav
                class="af-pager"
              >
                <ul
                  class="af-pager__pagination"
                >
                  <li
                    class="af-pager__item af-pager__item--disabled"
                  >
                    <span
                      class="af-pager__item-nolink"
                    >
                      « Précédent
                    </span>
                  </li>
                  <li
                    class="af-pager__item af-pager__item--active"
                  >
                    <a
                      class="af-pager__item-link"
                      href="#"
                    >
                      <span>
                        1
                      </span>
                    </a>
                  </li>
                  <li
                    class="af-pager__item af-pager__item--disabled"
                  >
                    <span
                      class="af-pager__item-nolink"
                    >
                      Suivant »
                    </span>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
